Fix some whitespace

--- a/src/_assets/common/_content.scss
+++ b/src/_assets/common/_content.scss
@@ -66,3 +66,8 @@ h3 {
     font-size: 1.5rem;
     font-weight: 400;
 }
+
+h4 {
+    font-size: 1.3rem;
+    font-weight: 300;
+}
